--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "react-sample",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
+  "description": "Sample react application",
+  "homepage": "https://github.com/vishal423/react-sample",
+  "author": {
+    "name": "Vishal Mahajan",
+    "email": "vishal423@gmail.com",
+    "url": "https://twitter.com/vishal423"
+  },
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -11,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage && cat ./coverage/lcov.info | coveralls",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,scss,md}",
     "lint": "eslint ."
