--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "url": "https://twitter.com/vishal423"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -24,7 +26,7 @@
     "test": "react-scripts test --coverage && cat ./coverage/lcov.info | coveralls",
     "eject": "react-scripts eject",
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx,json,css,scss,md}",
-    "lint": "eslint ."
+    "lint": "eslint src/*"
   },
   "browserslist": [
     ">0.2%",
